config-root/namespaces/jx-production/review/review-review-deploy.yaml
# Source: review/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-review
  labels:
    draft: draft-app
    chart: "review-0.0.19"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-production
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: review-review
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: review-review
    spec:
      serviceAccountName: review-review
      containers:
        - name: review
          image: "gcr.io/fair-expanse-297121/review:0.0.19"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
