config-root/namespaces/jx-production/review/review-ingress.yaml
# Source: review/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: review
  namespace: jx-production
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: review
              servicePort: 80
      host: review-jx-production.34.68.60.17.nip.io
